# IMC_preprocessing

./: .gitignore  README.md  requirement.txt  requirements.txt  setup.cfg
scripts/: Mesmer.py  cell_table.py  main.py
scripts/configs/: batch_metadata.yaml  config.yaml
scripts/post_extraction/: Mesmer.py  cell_table.py
src/: phenotyping_utils.py
src/imc_preprocessing/: Denoise_predict.py  Denoise_train.py  __init__.py  _imcsegpipe.py  extraction.py  post_Denoise_processing.py  reformatting_all_files.py  utils.py
src/imc_preprocessing/imcsegpipe/: _imcsegpipe.py
tests/: test.py
