[metadata]
name = imc_preprocessing
version = 1.0
author = giuseppetorrisi
author_email = gtorrisi@ed.ac.uk
description = =IMC preprocessing: from mcd to processed tiff
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/g-torr/IMC_preprocessing
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:
install_requires =
    tensorflow
    keras
    imageio
    numpy
    opencv-python-headless
    pandas
    scikit-image
    scipy
    tifffile
    xtiff
    tqdm
[options.packages.find]
where = src
python_requires = >=3.8

